--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "VT",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "mongoose": "^6.1.8"
   }
 }
